--- a/application/assets/css/create_group_modal.css
+++ b/application/assets/css/create_group_modal.css
@@ -36,3 +36,19 @@
     margin-top:7px;
     color:gray;
 }
+
+.divset {
+    background-color: url( /**/images/alert-overlay.png) #222 repeat-x;
+    display:inline-block;
+    padding: 5px 10px 6px;
+    color: fff;
+    text-decoration: none;
+    line-height: 1;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+    border-bottom: 1px solid rgba(0,0,0,0.25);position: relative;
+    cursor: pointer;
+}
