--- a/application/assets/css/create_group_modal.css
+++ b/application/assets/css/create_group_modal.css
@@ -1,6 +1,6 @@
 .create_group_content{
     display: none;
-    width: 550px;
+    width: 480px;
     height: auto;
     position: absolute;
     left: 50%;
@@ -22,7 +22,7 @@
 }
 
 .create_group_privacy{
-
+    text-align: center;
 }
 
 .create_group_bottom{
@@ -51,4 +51,9 @@
     text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
     border-bottom: 1px solid rgba(0,0,0,0.25);position: relative;
     cursor: pointer;
+}
+
+.divset.divset_selected {
+    background-color: lightgray;
+    color: black;
 }
