--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -147,6 +147,7 @@ a{
     width:100px;
     height:100%;
     background-color:#F3F6FF;
+background-image: url("/application/assets/images/bg_stripe_a.png");
     color:black;
     text-align: center;
 }
