--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -437,6 +437,7 @@ background: url('/application/assets/images/stripe_a.png' repeat-x 0 0);
 
     display:inline-block;
     padding: 5px 10px 6px;
+background-color: #2daebf;
     color: fff;
     text-decoration: none;
     line-height: 1;
