--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -1,7 +1,7 @@
 /*--------------GLOBAL ---------------- */
 body{
     background-color: #F3F6FF;
-background-image: url('/application/assets/images/bg_stripe3.png');
+background-image: url('/application/assets/images/stripe_a.png');
     margin: 0px;
     /* make text not selectable for the UI */
     -webkit-user-select: none;
@@ -135,8 +135,7 @@ a{
     height:30px;
     position:relative;
     border-bottom: 1px solid black;
-background: url('/application/assets/images/stripe_a.png' repeat-x 0 0);
-    //background-color:#F3F6FF;
+    background-color:#F3F6FF;
 }
 
 .data_tab {
@@ -148,8 +147,7 @@ background: url('/application/assets/images/stripe_a.png' repeat-x 0 0);
     margin-right:5px;
     width:100px;
     height:100%;
-background: url('/application/assets/images/stripe_a.png' repeat-x 0 0);
-    //background-color:#F3F6FF;
+    background-color:#F3F6FF;
     color:black;
     text-align: center;
 }
@@ -214,6 +212,7 @@ background: url('/application/assets/images/stripe_a.png' repeat-x 0 0);
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     background-color: white;
+
 }
 
 .day{
@@ -225,6 +224,8 @@ background: url('/application/assets/images/stripe_a.png' repeat-x 0 0);
     background-color: white;
     margin-left:0px;
     margin-right:0px;
+background: #111;
+    background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
 }
 
 .day.day_selected {
