--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -432,7 +432,7 @@ a{
 }
 
 .divset {
-    background-color: url( /**/images/alert-overlay.png) #222 repeat-x;
+    background-color: #222 url( /**/images/alert-overlay.png) repeat-x;
 
     display:inline-block;
     padding: 5px 10px 6px;
