--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -16,7 +16,7 @@ button{
     display:inline-block;
     padding: 5px 10px 6px;
     color: fff;
-background-color: #2daebf;
+    background-color: lightgray;
     text-decoration: none;
     line-height: 1;
     -moz-border-radius: 5px;
