--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -452,7 +452,7 @@ background: #2daebf;
 }
 
 .divset.divset_selected {
-    background-color: lightgray;
+    background-color: gray;
     color: black;
 }
 
