--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -133,7 +133,7 @@ a{
     width:100px;
     height:100%;
     /*background-color:#F3F6FF; */
-    color:black;
+    color:white;
     text-align: center;
 }
 
