--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -123,7 +123,7 @@ a{
 }
 
 .data_tab {
-    background-image: url("/application/assets/images/bg_stripe_a.png");
+    background: -webkit-gradient(linear,left top,left bottom,from(#ddffff),to(#eeffff));;
     position:relative;    
     float:left;
     border-top: 1px inset black;
