--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -433,7 +433,7 @@ a{
 }
 
 .divset.divset_selected {
-    background-color: gray;
+   background: -webkit-gradient(linear,left top,left bottom,from(#007),to(#02C));
     color: black;
 }
 
