--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -138,7 +138,7 @@ a{
 }
 
 .tab_selected {
-    background-color: navy;
+   background: -webkit-gradient(linear,left top,left bottom,from(#007),to(#02C));
     color: white;
 }
 
