--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -212,7 +212,7 @@ a{
 }
 
 .day.day_selected {
-    background-color: navy;
+    background:-webkit-gradient(linear,left top,left bottom,from(#007),to(#02C));
     color: white;
 }
 
