--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -61,10 +61,9 @@ a{
     margin-right: auto;
     width: 1024px;
     height :1000px;
-    /* give the container a shadow */
-    -moz-box-shadow: 0 0 5px 5px #888;
-    -webkit-box-shadow: 0 0 5px 5px#888;
+    /* give the container a shadow 
     box-shadow: 0 0 5px 5px #888;
+    */
 }
 
 /* -------------- LEFT PANEL ---------------- */ 
