--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -60,7 +60,7 @@ a{
     width: 1024px;
     height :1000px;
     text-align: center;
-    margin-top:30px;
+    margin-top:20px;
 }
 
 /* -------------- LEFT PANEL ---------------- */ 
@@ -68,11 +68,7 @@ a{
     float:left;
     width: 210px;
     min-height: 600px;
-    border: 1px solid black;
     text-align: center;
-    position:relative; 
-    top:30px;
-    border-right: none;
     background-color:white;
     padding-top:10px;
 }
@@ -109,7 +105,6 @@ a{
     float:left;
     width:600px;
     height: auto;
-    border-bottom: 1px solid black;
 }
 
 .tab_bar{
@@ -144,7 +139,7 @@ a{
 
 .data_container_wrapper {
     position:relative;
-    width: 598px;
+    width: 100%;
     height: 300px;
     display: none;
 }
@@ -152,8 +147,6 @@ a{
 .data_container{
     width: 100%;
     height: 100%;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
     background-color:white;
     display: none;
 }
@@ -313,8 +306,6 @@ a{
     width:210px;
     min-height: 600px;
     border: 1px solid black;
-    position:relative;
-    top:30px;
     border-left: none;
     background-color:white;
     padding-top:10px;
