--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -68,7 +68,7 @@ a{
 }
 
 .tab_selected {
-    background: -webkit-gradient(linear,left top,left bottom,from(#000077),to(#0022cc));
+    background: -webkit-gradient(linear,left top,left bottom,from(#73B1EA),to(#02C));
     color: white;
 }
 
