--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -61,7 +61,7 @@ a{
     height :1000px;
     text-align: center;
     margin-top:20px;
-    box-shadow: 0 0 5px 5px #E1E1E1;
+    box-shadow: 0 0 5px #E1E1E1;
 }
 
 /* -------------- LEFT PANEL ---------------- */ 
