--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -414,6 +414,7 @@ a{
     text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
     border-bottom: 1px solid rgba(0,0,0,0.25);position: relative;
     cursor: pointer;
+    font-size:12px;
 }
 
 .divset.divset_selected {
