--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -205,8 +205,8 @@ a{
 }
 
 .day.day_selected {
-    background:-webkit-gradient(linear,left top,left bottom,from(#73B1EA),to(#02C));
-    color: white;
+    background:-webkit-gradient(linear,left top,left bottom,from(#AAA),to(#EEE));
+    color: #444444;
 }
 
 .left_day_arrow{
@@ -418,7 +418,7 @@ a{
 }
 
 .divset.divset_selected {
-    background:-webkit-gradient(linear,left top,left bottom,from(#73B1EA),to(#02C));
+    background:-webkit-gradient(linear,left top,left bottom,from(#AAA),to(#EEE));
     color: white;
 }
 
