--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -56,6 +56,8 @@ a{
 }
 
 .tab{
+    -webkit-box-shadow:0 1px 3px rgba(0,0,0,0.5);
+    background-color: lightgray;
     width:100px;
     height:auto;
     margin-right: 10px;
@@ -64,6 +66,7 @@ a{
     text-align: center;
     padding-top:10px;
     padding-bottom:10px;
+    color:black;
 }
 
 .tab_selected {
