--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -268,7 +268,7 @@ a{
     margin-left:15px;
 }
 .suggest_groups_active{
-    background-color:navy;
+    background: -webkit-gradient(linear,left top,left bottom,from(#73B1EA),to(#02C));
     color:white;
 }
 
@@ -378,6 +378,6 @@ a{
 }
 
 .suggested_active{
-    background-color: navy;
+    background: -webkit-gradient(linear,left top,left bottom,from(#73B1EA),to(#02C));
     color:white;
 }
