--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -145,7 +145,7 @@ a{
 .user_entry .remove_following {
     float: right;
     width: 80px;
-    background-color: red;
+    background: -webkit-gradient(linear,left top,left bottom,from(#E00),to(#F01));
     color: white;
     padding: 3px;
 }
@@ -158,8 +158,7 @@ a{
 .user_entry .following {
     float: right;
     width: 80px;
-    background-color: green;
-    color: white;
+    background:-webkit-gradient(linear,left top,left bottom,from(#0A1),to(#0C2))    color: white;
     padding: 3px;
 }
 
@@ -304,7 +303,7 @@ a{
 }
 .group_entry .remove_following {
     width: 80px;
-    background-color: red;
+    background: -webkit-gradient(linear,left top,left bottom,from(#E00),to(#F01));
     color: white;
     padding: 3px;
 }
@@ -374,7 +373,7 @@ a{
     border:1px solid black;
     padding-left:3px;
     padding-right:3px;
-    background-color:#F3F6FF;
+    background-color:white;
 }
 
 .suggested_active{
