--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -158,7 +158,8 @@ a{
 .user_entry .following {
     float: right;
     width: 80px;
-    background:-webkit-gradient(linear,left top,left bottom,from(#0A1),to(#0C2))    color: white;
+    background:-webkit-gradient(linear,left top,left bottom,from(#0A1),to(#0C2));
+    color: white;
     padding: 3px;
 }
 
