--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -270,6 +270,7 @@ a{
 .suggest_groups_active{
     background: -webkit-gradient(linear,left top,left bottom,from(#73B1EA),to(#02C));
     color:white;
+    border:none;
 }
 
 .group_entry {
@@ -380,4 +381,5 @@ a{
 .suggested_active{
     background: -webkit-gradient(linear,left top,left bottom,from(#73B1EA),to(#02C));
     color:white;
+    border:none;
 }
