--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -376,6 +376,8 @@ a{
     padding-left:3px;
     padding-right:3px;
     background-color:white;
+    padding-left:5px;
+    padding-right:5px;
 }
 
 .suggested_active{
