--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -29,7 +29,7 @@ a{
 
 .top_panel_left{
     height:80%;
-    width:200px;
+    width:auto;
     float:left;
     text-align: center;
     color:white;
