--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -124,7 +124,7 @@ a{
     position:relative;    
     float:left;
     margin-right:10px;
-    width:auto;
+    width:100px;
     height:auto;
     color:black;
     text-align: center;
@@ -410,7 +410,6 @@ a{
     display:inline-block;
     padding: 5px 10px 6px;
     background: #F2F2F2;
-
     text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
     border-bottom: 1px solid rgba(0,0,0,0.25);position: relative;
     cursor: pointer;
