--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -88,17 +88,18 @@ a{
 
 .selectable_group {
     height:100%;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
     padding: 5px 0px 5px;
     color: navy;
-    background-color:#F3F6FF;
+    background:-webkit-gradient(linear,left top,left bottom,from(#DDD),to(#EEE));
     text-align:center;
     margin-bottom: 10px;
+    width:95%;
+    margin-left:5px;
+    
 }
 
 .selected_group {
-    background-color: beige;
+    background: -webkit-gradient(linear,left top,left bottom,from(#FF7),to(#FFA));
     color: navy;
 }
 
