--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -140,6 +140,8 @@ a{
 .change_location_panel {
     width : auto;
     height:85px;
+    background:-webkit-gradient(linear,left top,left bottom,from(#DDD),to(#EEE));
+    color:navy;
 }
 
 .data_container_wrapper {
