--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -148,6 +148,7 @@ a{
     background: -webkit-gradient(linear,left top,left bottom,from(#E00),to(#F01));
     color: white;
     padding: 3px;
+    margin-right:5px;
 }
 .user_entry .add_following {
     float: right;
