--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -155,6 +155,7 @@ a{
     width: 80px;
     background: -webkit-gradient(linear,left top,left bottom,from(#80B),to(#A3F));    color: white;
     padding: 3px;
+    margin-right:5px;
 }
 .user_entry .following {
     float: right;
@@ -162,6 +163,7 @@ a{
     background:-webkit-gradient(linear,left top,left bottom,from(#0A1),to(#0C2));
     color: white;
     padding: 3px;
+    margin-right:5px;
 }
 
 /* follower tab */
@@ -309,6 +311,8 @@ a{
     background: -webkit-gradient(linear,left top,left bottom,from(#E00),to(#F01));
     color: white;
     padding: 3px;
+    margin-top:5px;
+    margin-right:5px;
 }
 .group_entry .add_following {
     float: right;
