--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -399,15 +399,23 @@ a{
 }
 
 /* ----------------- PROFILE CSS ---------------*/
+.profile_container{
+    width:100%;
+    margin-left:auto;
+    margin-right:auto;
+}
+
 .profile_content{
+    float:left;
     border: 1px solid black;
     margin-left:auto;
     margin-right:auto;
     height:500px;
     width: 300px;
     background-color:white;
-    
 }
+
+
 
 .profile_top_bar{
     width:100%;
@@ -420,3 +428,4 @@ a{
     width:100%;
     background-color:gray;
 }
+
