--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -415,17 +415,24 @@ a{
     background-color:white;
 }
 
-
-
 .profile_top_bar{
     width:100%;
     height:40px;
 }
 
+.profile_user_information{
+    
+    
+}
+
 .profile_body{
     position:relative;
-    height:100%;
+    height:320px;
     width:100%;
-    background-color:gray;
 }
+
+.profile_edit{
+    
+}
+
 
