--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -411,7 +411,7 @@ a{
     margin-left:auto;
     margin-right:auto;
     height:500px;
-    width: 300px;
+    width: 48%;
     background-color:white;
 }
 
