--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -401,6 +401,7 @@ a{
 /* ----------------- PROFILE CSS ---------------*/
 .profile_container{
     width:100%;
+    height:100%;
     margin-left:auto;
     margin-right:auto;
 }
@@ -417,7 +418,15 @@ a{
 
 .profile_top_bar{
     width:100%;
-    height:40px;
+    height:100px;
+}
+
+.profile_picture{
+    width:80px;
+    height:80px;
+    position:relative;
+    top:10px;
+    left:10px;
 }
 
 .profile_user_information{
