--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -406,7 +406,7 @@ a{
     margin-right:auto;
 }
 
-.profile_content{
+.profile_box{
     float:left;
     border: 1px solid black;
     margin-left:auto;
