--- a/application/assets/css/token-input.css
+++ b/application/assets/css/token-input.css
@@ -3,7 +3,7 @@ ul.token-input-list {
     overflow: hidden; 
     height: auto !important; 
     height: 1%;
-    width: 400px;
+    width: 100%;
     border: 1px solid #999;
     cursor: text;
     font-size: 12px;
@@ -22,7 +22,7 @@ ul.token-input-list li {
 
 ul.token-input-list li input {
     border: 0;
-    width: 350px;
+    width: 100%;
     padding: 3px 8px;
     background-color: white;
     -webkit-appearance: caret;
@@ -64,7 +64,7 @@ li.token-input-selected-token span {
 
 div.token-input-dropdown {
     position: absolute;
-    width: 400px;
+    width: 100%;
     background-color: #fff;
     overflow: hidden;
     border-left: 1px solid #ccc;
