--- a/application/assets/css/create_group_modal.css
+++ b/application/assets/css/create_group_modal.css
@@ -55,3 +55,18 @@
     background-color: lightgray;
     color: black;
 }
+
+.invite_wrapper {
+    width: 100%;
+}
+
+.invite_wrapper .left {
+    float: left;
+    width: 48%;
+}
+
+.invite_wrapper .right {
+    float: left;
+    margin-left: 4%;
+    width: 48%;
+}
