--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -198,13 +198,12 @@ a{
 }
 
 .day{
+    float:left;
     display: inline-block;
-    width: 75px;
+    width: 74px;
     height:100%;
     border-left: 1px solid black;
     background-color: white;
-    margin-left:0px;
-    margin-right:0px;
 }
 
 .day.day_selected {
@@ -214,21 +213,20 @@ a{
 
 .left_day_arrow{
     float:left;
-    width:32px;
+    width:35px;
     height:100%;
     border-left: 1px solid black;
-    background-color: white;
+    background-color: lightblue;
 }
 
 .right_day_arrow{
     display: inline-block;
-    vertical-align: middle;
-    float:left;
+    float:right;
     border-left: 1px solid black;
     border-right: 1px solid black;
-    width:33px;
+    width:35px;
     height:100%;
-    background-color: white;
+    background-color: lightblue;
 }
 
 .seven_days {
