--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -420,7 +420,7 @@ a{
 .profile_top_bar{
     width:100%;
     height:100px;
-    background-color:lightgray;
+    background:-webkit-gradient(linear,left top,left bottom,from(silver),to(#DADADA));
 }
 
 .profile_picture{
