--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -203,11 +203,11 @@ a{
     width: 74px;
     height:100%;
     border-left: 1px solid black;
-    background-color: white;
+    background:-webkit-gradient(linear,left top,left bottom,from(#AAA),to(#EEE));
 }
 
 .day.day_selected {
-    background:-webkit-gradient(linear,left top,left bottom,from(#AAA),to(#EEE));
+    background:-webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#EEE));
     color: #444444;
 }
 
@@ -217,7 +217,7 @@ a{
     height:100%;
     border-left: 1px solid black;
     border-right: 1px solid black;
-    background-color: lightblue;
+    background:-webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#EEE));
 }
 
 .right_day_arrow{
