--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -207,7 +207,7 @@ a{
 }
 
 .day.day_selected {
-    background:-webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#EEE));
+    background:-webkit-gradient(linear,left top,left bottom,from(green),to(lightgreen));
     color: #444444;
 }
 
