--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -227,7 +227,7 @@ a{
     border-right: 1px solid black;
     width:35px;
     height:100%;
-    background-color: lightblue;
+    background:-webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#EEE));
 }
 
 .seven_days {
