--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -217,7 +217,7 @@ a{
     height:100%;
     border-left: 1px solid black;
     border-right: 1px solid black;
-    background:-webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#EEE));
+    background:-webkit-gradient(linear,left top,left bottom,from(lightyellow),to(lightgray));
 }
 
 .right_day_arrow{
@@ -227,7 +227,7 @@ a{
     border-right: 1px solid black;
     width:35px;
     height:100%;
-    background:-webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#EEE));
+    background:-webkit-gradient(linear,left top,left bottom,from(lightyellow),to(lightgray));
 }
 
 .seven_days {
