--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -299,7 +299,7 @@ a{
 .group_entry .group_picture {
     width: 50px;
     height: 50px;
-    background-color: lightgrey;
+    background-color: white;
 }
 .group_entry .group_entry_middle {
     float: left;
