--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -136,7 +136,7 @@ a{
 .user_entry .user_picture {
     width: 50px;
     height: 50px;
-    background-color: lightgrey;
+    background-color: white;
 }
 .user_entry .user_entry_middle {
     float: left;
@@ -262,6 +262,7 @@ a{
 #groups_content .right_header {
     width: 100%;
     height: 35px;
+    border-top-right-radius:10px;
 }
 .suggest_groups{
     display:inline-block;
