--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -390,13 +390,14 @@ a{
     border:1px solid black;
     padding-left:3px;
     padding-right:3px;
-    background-color:lightblue;
+    background: -webkit-gradient(linear,left top,left bottom,from(#AAA),to(#EEE));
     padding-left:15px;
     padding-right:15px;
 }
 
 .suggested_active{
-    background: -webkit-gradient(linear,left top,left bottom,from(#AAA),to(#EEE));
+    
+    background:-webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#DFF));
     color:black;
     border:none;
 }
