--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -276,8 +276,8 @@ a{
     margin-left:15px;
 }
 .suggest_groups_active{
-    background: -webkit-gradient(linear,left top,left bottom,from(lightGreen),to(#AFB));
-    color:white;
+    background:-webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#DFF));
+    color:black;
 }
 
 .group_entry {
