--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -85,7 +85,7 @@ a{
 
 /* following tab */
 #following_content .left {
-    width:48%;
+    width:40%;
     float:left;
     height:auto;
     background-color:white;
@@ -99,12 +99,13 @@ a{
     height: 800px;
 }
 #following_content .right {
-    width:48%;
-    float:right;
+    width:40%;
+    float:left;
     height:auto;
     background-color:white;
     border: 1px solid black;
     border-top-right-radius: 10px;
+    margin-left:50px;
 }
 #following_content .right_header {
     height: 30px;
@@ -381,12 +382,12 @@ a{
 }
 
 .suggested_friends{
-    margin-right:50px;
+    margin-right:30px;
     width:auto;
     height:33px;
     text-align:center;
     float:right;
-    margin-top:7px;
+    margin-top:8px;
     border:1px solid black;
     padding-left:3px;
     padding-right:3px;
