--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -182,7 +182,8 @@ a{
     text-align:center;
     color:navy;
     height:25px;
-    padding-top:5px;
+    padding-top:10px;
+    padding-bottom:10px;
     margin-bottom:-7px;
 }
 .left_header{
