--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -144,7 +144,7 @@ h1 {
     position:relative;
     float:left;
     width:100%;
-    height:20px;
+    height:auto;
     font-family:Arial, Helvetica, sans-serif;
     text-align:center;
 }
