--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -279,7 +279,7 @@ a{
     margin-left:15px;
 }
 .suggest_groups_active{
-    background:-webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#DFF));
+    background:-webkit-gradient(linear,left top,left bottom,from(lightYellow),to(lightgray));
     color:black;
 }
 
@@ -399,7 +399,7 @@ a{
 }
 
 .suggested_active{
-    background:-webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#DFF));
+    background:-webkit-gradient(linear,left top,left bottom,from(lightYellow),to(lightgray));
     color:black;
 }
 
