--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -245,15 +245,12 @@ a{
     border: 1px solid black;
     background-color:white;
 }
-#groups_content .middle .add_joined {
+.add_joined {
     float: right;
     width: 80px;
     background-color: green;
     color: white;
     padding: 3px;
-    position: relative;
-    right: 5px;
-    bottom: 5px;
 }
 #groups_content .right {
     width: 360px;
