--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -241,7 +241,7 @@ a{
     width: 340px;
     float: left;
     margin-left: 20px;
-    height: 20%;
+    height: auto;
     border: 1px solid black;
     background-color:white;
 }
@@ -439,7 +439,7 @@ a{
 
 .profile_body{
     position:relative;
-    height:320px;
+    height:auto;
     width:100%;
     text-align:left;
 }
