--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -244,6 +244,7 @@ a{
     height: auto;
     border: 1px solid black;
     background-color:white;
+    padding-bottom:10px;
 }
 
 #groups_content .right {
