--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -241,16 +241,17 @@ a{
 #groups_content .middle {
     width: 340px;
     float: left;
-    margin-left: 20px;
+    margin-left: 15px;
     height: auto;
     border: 1px solid black;
     background-color:white;
-    padding-bottom:10px;
+    padding:10px;
 }
 
 #groups_content .right {
     width: 360px;
-    float: right;
+    float:left;
+    margin-left:15px;
     height: auto;
     border: 1px solid black;
     border-top-right-radius:10px;
