--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -426,7 +426,6 @@ a{
     height:80px;
     float:left;
     margin-top:10px;
-    margin-left:10px;
     background-color:white;
 }
 
@@ -435,7 +434,7 @@ a{
     width:auto;
     float:right;
     margin-top:10px;
-    margin-right:130px;
+    margin-right:110px;
     text-align:center;
 }
 
@@ -444,6 +443,7 @@ a{
     height:auto;
     width:100%;
     text-align:left;
+    margin-left:10px;
 }
 
 .profile_body_text{
@@ -459,7 +459,7 @@ a{
 .profile_bottom_bar{
     width:100%;
     height:auto;
-    text-align:center;
+    text-align:left;
 }
 
 .add_joined {
