--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -419,6 +419,7 @@ a{
 .profile_top_bar{
     width:100%;
     height:100px;
+    text-align: center;
 }
 
 .profile_picture{
@@ -430,12 +431,7 @@ a{
 }
 
 .profile_user_information{
-    height:80px;
-    width:auto;
-    float:right;
-    margin-top:10px;
-    margin-right:110px;
-    text-align:center;
+    width:277px;
 }
 
 .profile_body{
