--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -1,4 +1,4 @@
-#notifications_content .left {
+#notifications_content > .left {
     padding: 5px;
     width: 48%;
     height: auto;
@@ -6,7 +6,7 @@
     border: 1px solid black;
 }
 
-#notifications_content .right {
+#notifications_content > .right {
     padding: 5px;
     width: 48%;
     height: auto;
@@ -18,7 +18,39 @@
     height: auto;
 }
 
-#notification_list .notification_entry {
-    height: auto;
-    border: 1px solid black;
+.notification_entry {
+    width: 100%;
+    height: 55px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    margin-top: 5px;
+    padding-top:5px;
+}
+
+.notification_entry.unviewed {
+    background: -webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#DFF));
+}
+
+.notification_entry > .left {
+    float: left;
+    width: 90px;
+}
+
+.notification_entry .picture {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.notification_entry > .middle {
+    float: left;
+    width: auto;
+}
+
+.notification_entry > .accept {
+    float: right;
+    width: 80px;
+    background: -webkit-gradient(linear,left top,left bottom,from(#E00),to(#F01));
+    color: white;
+    padding: 3px;
+    margin-right:5px;
 }
