--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -20,7 +20,7 @@
 
 .notification_entry {
     width: 100%;
-    height: 55px;
+    height: 60px;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     margin-top: 5px;
@@ -37,8 +37,15 @@
 }
 
 .notification_entry .picture {
+    width: 50px;
+    height: 50px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.notification_entry .picture img {
+    width: 100%;
+    height: 100%;
 }
 
 .notification_entry > .middle {
