--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -56,8 +56,9 @@
 .notification_entry > .accept {
     float: right;
     width: 80px;
-    background: -webkit-gradient(linear,left top,left bottom,from(#E00),to(#F01));
+    background: -webkit-gradient(linear,left top,left bottom,from(#80B),to(#A3F));
     color: white;
     padding: 3px;
     margin-right:5px;
+    text-align: center;
 }
