--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -25,6 +25,7 @@
     border-bottom: 1px solid black;
     margin-top: 5px;
     padding-top:5px;
+    position: relative;
 }
 
 .notification_entry.unviewed {
@@ -65,7 +66,7 @@
 
 .notification_entry .mark_read {
     float: right;
-    width: 90px;
+    width: auto;
     color: grey;
     padding: 3px;
     margin-right:5px;
