--- a/application/assets/css/dashboard_groups.css
+++ b/application/assets/css/dashboard_groups.css
@@ -112,7 +112,7 @@
 .group_entry .joined {
     float: right;
     width: 75px;
-    background:-webkit-gradient(linear,left top,left bottom,from(#80B),to(#A3F));
+    background:-webkit-gradient(linear,left top,left bottom,from(#DF58E8),to(purple));
     color: white;
     padding: 3px;
     text-align: center;
@@ -132,7 +132,7 @@
 
 .middle .add_joined {
     display:inline-block;
-    background:-webkit-gradient(linear,left top,left bottom,from(#0A1),to(#0C2));
+    background:-webkit-gradient(linear,left top,left bottom,from(#0C2),to(green));
     color: white;
     padding: 3px;
 }
@@ -141,7 +141,7 @@
 .group_entry .add_following {
     float: right;
     width: 75px;
-    background: -webkit-gradient(linear,left top,left bottom,from(#0A1),to(#0C2));
+    background: -webkit-gradient(linear,left top,left bottom,from(#0C2),to(green));
     color: white;
     padding: 3px;
     text-align: center;
