--- a/application/assets/css/dashboard_groups.css
+++ b/application/assets/css/dashboard_groups.css
@@ -34,6 +34,7 @@
     border: 1px solid black;
     background-color:white;
     padding:10px;
+    min-height:25px;
 }
 
 #groups_content > .right {
