--- a/application/assets/css/dashboard_groups.css
+++ b/application/assets/css/dashboard_groups.css
@@ -135,6 +135,7 @@
     background:-webkit-gradient(linear,left top,left bottom,from(#DF58E8),to(purple));
     color: white;
     padding: 3px;
+    width:75px;
 }
 
 
