--- a/application/assets/css/dashboard_groups.css
+++ b/application/assets/css/dashboard_groups.css
@@ -19,7 +19,7 @@
 #groups_content .left_header {
     width: 100%;
     text-align:center;
-    color:navy;
+    color:gray;
     height:44px;
 }
 #left_groups_list {
@@ -136,6 +136,7 @@
     color: white;
     padding: 3px;
     width:75px;
+    text-align: center;
 }
 
 
