--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -209,7 +209,7 @@ a{
 }
 
 .day.day_selected {
-    background:-webkit-gradient(linear,left top,left bottom,from(green),to(lightgreen));
+    background:-webkit-gradient(linear,left top,left bottom,from(#0C2),to(green));
     color: #444444;
 }
 
