--- a/application/assets/css/in-field_labels.css
+++ b/application/assets/css/in-field_labels.css
@@ -1,8 +1,7 @@
 .in-field_block {
     position:relative;
-    height:30px;
-    width:200px;
-    float: left;
+    height:auto;
+    width:auto;
 }
 
 .in-field_block label {
@@ -14,6 +13,6 @@
 }
 
 .in-field_block input {
-    width: 100%;
-    height: 100%;
+    width: 30px;
+    height: 200px;
 }
