--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -238,7 +238,7 @@ a{
     margin-right:auto;
     height:auto;
     width: 48%;
-    padding-right:10px;
+    padding:10px;
     background-color:white;
 }
 
