--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -13,6 +13,24 @@
     border: 3px solid black;
     text-align: center;
 }
+
+#create_plan_content .draggable_title_bar {
+    height: 25px;
+    background-color:purple;
+    color:white;
+    font-size:18px;
+    padding-left:10px;
+    padding-top:3px;
+}
+
+#plan_page_wrapper {
+    width: 100%;
+    height: 250px;
+}
+
+
+
+
 #plan_location {
     float: left;
 }
@@ -28,14 +46,7 @@
     height:30px;
     width:200px;
 }
-#create_plan_content .draggable_title_bar {
-    height: 25px;
-    background-color:purple;
-    color:white;
-    font-size:18px;
-    padding-left:10px;
-    padding-top:3px;
-}
+
 #invite_plan_left {
     width: 48%;
     float: left;
